objects/Quote_Address__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Hardware_Quote_Line__c</fullName>
        <label>Count Hardware Quote Line</label>
        <summaryFilterItems>
            <field>Quote_Line_Address__c.Is_Hardware__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line_Address__c.Quote_Address__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Saint Eustatius And Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Customer_Contact_Name__c</fullName>
        <label>End Customer Contact Name(if diff):</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FD_Company__c</fullName>
        <label>Final Destination Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FD_Country__c</fullName>
        <label>Final Destination Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Saint Eustatius And Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FD_First_Name__c</fullName>
        <label>Final Destination First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FD_Last_Name__c</fullName>
        <label>Final Destination Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Count__c</fullName>
        <label>Hardware Count</label>
        <summarizedField>Quote_Line_Address__c.Shipping_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Line_Address__c.Is_Hardware__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line_Address__c.Quote_Address__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_EU__c</fullName>
        <formula>CASE
(
    Country__c, 
   &apos;Latvia&apos;,1,
&apos;Hungary&apos;,1,
&apos;Lithuania&apos;,1,
&apos;Luxembourg&apos;,1,
&apos;Ireland&apos;,1,
&apos;Malta&apos;,1,
&apos;Estonia&apos;,1,
&apos;Romania&apos;,1,
&apos;Slovenia&apos;,1,
&apos;United Kingdom&apos;,1,
&apos;Cyprus&apos;,1,
&apos;Belgium&apos;,1,
&apos;Czech Republic&apos;,1,
&apos;Denmark&apos;,1,
&apos;Netherlands&apos;,1,
&apos;Austria&apos;,1,
&apos;Greece&apos;,1,
&apos;Finland&apos;,1,
&apos;France&apos;,1,
&apos;Germany&apos;,1,
&apos;Slovakia&apos;,1,
&apos;Italy&apos;,1,
&apos;Spain&apos;,1,
&apos;Sweden&apos;,1,
&apos;Poland&apos;,1,
&apos;Portugal&apos;,1,
&apos;Bulgaria&apos;,1,
    0
)=1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is EU?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_final_dest_in_a_different_country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is final dest in a different country?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Addr_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quote Addr Ext Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quote Addresses</relationshipLabel>
        <relationshipName>Quote_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VAT_Addr__c</fullName>
        <inlineHelpText>VAT information is not required for shipment of EC-US, EC-XS, EC-S, NX-700 or NX-1700. Please enter N/A in all fields if shipping these models.</inlineHelpText>
        <label>VAT Addr</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VAT_Company__c</fullName>
        <inlineHelpText>VAT information is not required for shipment of EC-US, EC-XS, EC-S, NX-700 or NX-1700. Please enter N/A in all fields if shipping these models.</inlineHelpText>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_ID__c</fullName>
        <inlineHelpText>VAT information is not required for shipment of EC-US, EC-XS, EC-S, NX-700 or NX-1700. Please enter N/A in all fields if shipping these models.</inlineHelpText>
        <label>VAT ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Quote Address</label>
    <nameField>
        <label>Quote Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EU_VAT_ID_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Is_EU__c ,
ISBLANK( VAT_ID__c))</errorConditionFormula>
        <errorDisplayField>VAT_ID__c</errorDisplayField>
        <errorMessage>VAT ID is required for the selected country</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_VAT_address_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Is_EU__c ,
ISBLANK(VAT_Addr__c))</errorConditionFormula>
        <errorDisplayField>VAT_Addr__c</errorDisplayField>
        <errorMessage>VAT Address is required for the selected country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_VAT_company_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Is_EU__c ,
ISBLANK(  VAT_Company__c ))</errorConditionFormula>
        <errorDisplayField>VAT_Company__c</errorDisplayField>
        <errorMessage>Company is required for the selected country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Final_DestinationFirstName_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 Is_final_dest_in_a_different_country__c ,
ISBLANK( FD_First_Name__c )
)</errorConditionFormula>
        <errorDisplayField>FD_First_Name__c</errorDisplayField>
        <errorMessage>First Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Final_Destination_Company_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 Is_final_dest_in_a_different_country__c ,
ISBLANK( FD_Company__c )
)</errorConditionFormula>
        <errorDisplayField>FD_Company__c</errorDisplayField>
        <errorMessage>Company is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Final_Destination_Country_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 Is_final_dest_in_a_different_country__c ,
ISPICKVAL( FD_Country__c,&quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>FD_Country__c</errorDisplayField>
        <errorMessage>Final Destination Country is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Final_Destination_Last_Name_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 Is_final_dest_in_a_different_country__c ,
ISBLANK( FD_Last_Name__c )
)</errorConditionFormula>
        <errorDisplayField>FD_Last_Name__c</errorDisplayField>
        <errorMessage>Last Name is required</errorMessage>
    </validationRules>
</CustomObject>